<resources>
    <string name="app_name">Github Basic Client</string>

    <!-- - - - - - - - - - - - - - - - - label, title - - - - - - - - - - - - - - - - - - - - - -->
    <string name="toolbar_title">Github Basic Client</string>
    <string name="loading_title">Loading</string>
    <string name="title_user_detail">User Detail</string>
    <string name="search_title">Search for users</string>
    <string name="loadMore_btn_title">Load More</string>
    <string name="profile_tab_title">PROFILE</string>
    <string name="repositories_tab_title">REPOSITORIES</string>
    <string name="alert_filter_title">Choose Filter parameter</string>
    <string name="ok">OK</string>
    <string name="profile_name_title">NAME :</string>
    <string name="profile_location_title">LOCATION :</string>
    <string name="profile_email_title">EMAIL :</string>
    <string name="profile_profile_url_title">PROFILE URL :</string>
    <string name="profile">Profile</string>
    <string name="repositories">Repositories</string>

    <!-- - - - - - - - - - - - - - - - - Filter Type - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="filter_type_start_label">filter type : </string>


    <string name="filter_type_name_asc">filter type : name asc</string>
    <string name="filter_type_name_desc">filter type : name desc</string>

    <string name="filter_type_created_at_asc">filter type : data creation asc</string>
    <string name="filter_type_created_at_desc">filter type : data creation desc</string>

    <string name="filter_type_updated_at_asc">filter type : data update asc</string>
    <string name="filter_type_updated_at_desc">filter type : data update desc</string>

    <string name="filter_type_pushed_at_asc">filter type : data pushed asc</string>
    <string name="filter_type_pushed_at_desc">filter type : data pushed desc</string>


    <!-- - - - - - - - - - - - - - - - - Messages - - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="no_data">No data retrieved, try another search</string>
    <string name="no_connection">No network, check your connection...</string>
    <string name="searching">Searching...</string>
    <string name="splash_image">splash_image</string>
    <string name="user_name">Name</string>
    <string name="user_location">Location</string>
    <string name="user_email">Email</string>
    <string name="user_profile_url">Profile_url</string>
    <string name="profile_image">profile_image</string>
    <string name="repositories_title">Repositories</string>
    <string name="star_description">star</string>
    <string name="user_photo">user_photo</string>
    <string name="user_name_in_list">user name</string>
    <string name="arrow_image">arrow_image</string>


</resources>
