<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ProfileFragment">

    <ImageView
        android:id="@+id/user_photo_img"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/profile_image"
        android:src="@mipmap/dummy_user_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/profile_name_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/user_photo_img"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@+id/user_photo_img"
        app:layout_constraintTop_toBottomOf="@+id/user_photo_img" />

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/user_name"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toStartOf="@+id/name_title_txt"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@+id/name_title_txt"
        app:layout_constraintTop_toBottomOf="@+id/name_title_txt" />

    <TextView
        android:id="@+id/location_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/profile_location_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/name_txt"
        app:layout_constraintStart_toEndOf="@+id/name_txt"
        app:layout_constraintTop_toBottomOf="@+id/name_txt" />

    <TextView
        android:id="@+id/location_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/user_location"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toStartOf="@+id/location_title_txt"
        app:layout_constraintStart_toEndOf="@+id/location_title_txt"
        app:layout_constraintTop_toBottomOf="@+id/location_title_txt" />

    <TextView
        android:id="@+id/email_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/profile_email_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/location_txt"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/location_txt"
        app:layout_constraintTop_toBottomOf="@+id/location_txt" />

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/user_email"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toStartOf="@+id/email_title_txt"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/email_title_txt"
        app:layout_constraintTop_toBottomOf="@+id/email_title_txt" />

    <TextView
        android:id="@+id/profile_url_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/profile_profile_url_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/email_txt"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/email_txt"
        app:layout_constraintTop_toBottomOf="@+id/email_txt" />

    <TextView
        android:id="@+id/profile_url_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/user_profile_url"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile_url_title_txt"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/profile_url_title_txt"
        app:layout_constraintTop_toBottomOf="@+id/profile_url_title_txt"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>